validates grants per client